Fix grid aligning wrong prop

--- a/src/styles/components/grid.styl
+++ b/src/styles/components/grid.styl
@@ -14,9 +14,9 @@
         margin-right: toNegative(toUnit(16));
         display: flex;
         flex-flow: row wrap;
-        
-        &.c-align-center {
-            align-content: center;
+
+        &.h-align-center {
+            justify-content: center;
         }
 
         &.v-align-center {
